<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tiny Kitchen Helper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome!</string>
    <string name="username">Enter Username</string>
    <string name="guest">Guest</string>
    <string name="signIn">Come on in!</string>
    <string name="OK">OK!</string>
    <string name="go">Go!</string>
    <string name="No">Continue as Guest</string>
    <string name="newUsr">New User</string>
    <string name="title_activity_options_page">Options</string>
    <string name="optionsMenu">What would you like to do?</string>
    <string name="profile">View/Edit Your Profile</string>
    <string name="planner">Plan Your Next Meal</string>
    <string name="shop">Shopping List</string>
    <string name="kitchen">What\'s in My Kitchen?</string>
    <string name="recipes">Look at My Recipes</string>
    <string name="recipeWelcome">Recipe Options</string>
    <string name="allR">All Recipes</string>
    <string name="recentR">Recent Recipes</string>
    <string name="searchR">Search for a Recipe</string>
    <string name="addR">Add a new Recipe</string>
    <string name="editR">Edit or Remove a Recipe</string>
    <string name="title_activity_meal_manager">Meal Manager</string>
    <string name="title_activity_profile_manager">Profile Manager</string>
    <string name="title_activity_shopping_manager">Shopping Manager</string>
    <string name="title_activity_kitchen_manager">Kitchen Manager</string>
    <string name="title_activity_recipe_manager">Recipe Manager</string>
    <string name="title_activity_recipe_object">Recipe Object</string>
    <string name="title_activity_add_recipe">Add Recipe</string>

</resources>
