<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecipeManager" >

    <TextView
        android:id="@+id/RecipeWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/recipeWelcome" />

    <RadioGroup
        android:id="@+id/recipeChoiceGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@id/RecipeWelcome">

        <RadioButton
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allR" >
        </RadioButton>

        <RadioButton
            android:id="@+id/recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recentR" >
        </RadioButton>

        <RadioButton
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchR" >
        </RadioButton>

        <RadioButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addR" >
        </RadioButton>

        <RadioButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editR" >
        </RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipeChoiceGroup"
        android:text="@string/go" >
    </Button>

</RelativeLayout>